--- a/mr_robot_firmware/config/mr_robot_firmware.yaml
+++ b/mr_robot_firmware/config/mr_robot_firmware.yaml
@@ -4,7 +4,7 @@ mr_robot_firmware :
   wheel_separation : 0.22
   max_pwm_val : 100 
   min_pwm_val : 30
-  high1 : 5
-  ground1 : 6
-  high2 : 16
-  ground2 : 20
+  leftA : 5
+  leftB : 6
+  rightA : 16
+  rightB : 20
