--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
         "/home/noemoji041/auto_catkin/devel/lib/python3/dist-packages",
         "/home/noemoji041/catkin_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/noemoji041/auto_catkin/devel/lib/python3/dist-packages",
+        "/home/noemoji041/catkin_ws/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages"
     ]
 }
